# NSimpleCrusher

./: CMakeLists.txt  README.md
resource/: NSimpleCrushereditor.uidesc
source/: NSimpleCrushercids.h  NSimpleCrushercontroller.cpp  NSimpleCrushercontroller.h  NSimpleCrusherentry.cpp  NSimpleCrusherprocessor.cpp  NSimpleCrusherprocessor.h  version.h
